k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: vote
